add EventListenerSearchingCitiesProcessTest